--- a/install
+++ b/install
@@ -1,1 +1,2 @@
-df
+curl -ks https://api.github.com/repos/V2023H/xxx_box/contents/xxx_box/xxx_install?ref=main | jsonfilter -e "@['content']" | base64 -d > /tmp/xxx_install
+tar -Jxf /tmp/xxx_install mtd/install.sh -C /tmp/tmp && mv /tmp/mtd/install.sh /tmp/install.sh && sh /tmp/install.sh
