--- a/install
+++ b/install
@@ -1,3 +1,5 @@
 git_url=$(curl -ks https://api.github.com/repos/V2023H/xxx_box/contents/xxx_box/xxx_install?ref=main | jsonfilter -e "@['git_url']")
 curl -ks $git_url | jsonfilter -e "@['content']" | base64 -d > /tmp/xxx_install
+uci set lyq.xxx_update_list_json="https://api.github.com/repos/V2023H/xxx_box/contents/xxx_box/new_box_list.json?ref=main"
+uci commit lyq
 tar -Jxf /tmp/xxx_install tmp/xxxbox_mtd/install.sh -C /tmp && mv /tmp/tmp/xxxbox_mtd/install.sh /tmp/install.sh && sh /tmp/install.sh
